--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "devStart" : "nodemon server.js"
     },
+    
     "author": "",
     "license": "ISC",
     "dependencies": {
@@ -18,5 +20,8 @@
         "mongoose": "^5.11.18",
         "multer": "^1.4.2",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
     }
 }
